Bug 76286. Bullet-proof code that uses mDocumentRequest; add assert-botch to catch cases where first request is not LOAD_DOCUMENT_URI. r=darin, sr=mscott, a=chofmann.